[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nist-rmf-ai-mcp"
version = "1.0.0"
description = "MEOK AI Labs — nist-rmf-ai-mcp"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "ai-governance", "compliance", "meok"]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/nist-rmf-ai-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]
